# skimmer

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  skimmer.desktop  y1-skimmer.desktop
build-aux/data/: tech.jptr.Skimmer.metainfo.xml
build-aux/data/icons/: Skimmer.icns
build-aux/flatpak/: com.y1.skimmer.yml  pydeps.json  pypi-dependencies.json  requirements.txt  tech.jptr.Skimmer.yml  update-deps.sh
build-aux/macos/: build-app.sh  runtime-hook.py
skimmer/: __main__.py  app.py  config.py  library.py  log.py  media_integration.py  mpris_adapter.py  player.py  playlist.py  playlists_ui.py  processing.py  scanner.py  search.py  settings.py  synccache.py  widgets.py  worker.py
tests/: conftest.py  test_config.py  test_scanner.py  test_worker.py
