[project]
name = "y1-skimmer"
version = "0.1.0"
description = "GTK4 music manager for the Innioasis Y1"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.42.0",
    "ytmusicapi>=1.0.0",
    "yt-dlp>=2023.0.0",
    "beets>=2.0.0",
]

[project.scripts]
y1-skimmer = "skimmer.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
package = true
